// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuIcon should be rendered correctly 1`] = `
<a
  className="uui-button-box uui-enabled -clickable uui-anchor root uui-icon_button uui-color-neutral container"
  href=""
  onClick={[Function]}
  rel="noopener noreferrer"
  tabIndex={0}
  target="_blank"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</a>
`;

exports[`MainMenuIcon should be rendered correctly with minimum props 1`] = `
<button
  className="uui-button-box uui-enabled root uui-icon_button uui-color-neutral container"
  tabIndex={-1}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
